--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +25,34 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.body {
+  display: grid;
+
+  grid-gap: 10px;
+  grid-auto-rows: minmax(400px, auto);
+
+  .left {
+    grid-column: 1/2;
+    grid-row: 1;
+  }
+
+  .right {
+    grid-column: 3/3;
+    grid-row: 1;
+  }
+  .resume1 {
+    grid-auto-rows: minmax(50%, auto);
+
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+  .resume2 {
+    grid-column: 3/3;
+    grid-row: 2;
+  }
+
 }
 
 @keyframes App-logo-spin {
